--- a/gazebo_ros2_control_demos/package.xml
+++ b/gazebo_ros2_control_demos/package.xml
@@ -6,7 +6,7 @@
 
   <maintainer email="ahcorde@osrfoundation.org">Alejandro Hernandez</maintainer>
 
-  <license>BSD</license>
+  <license>Apache License 2.0</license>
 
   <url type="website">http://ros.org/wiki/gazebo_ros_control</url>
   <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros2_control/issues</url>
@@ -20,6 +20,10 @@
   <exec_depend>gazebo_ros2_control</exec_depend>
   <exec_depend>launch</exec_depend>
   <exec_depend>launch_ros</exec_depend>
+
+  <test_depend>ament_cmake_gtest</test_depend>
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
