--- a/gazebo_ros2_control/package.xml
+++ b/gazebo_ros2_control/package.xml
@@ -30,6 +30,10 @@
   <depend>urdf</depend>
   <depend>angles</depend>
 
+  <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_cmake_gtest</test_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
     <gazebo_ros_control plugin="${prefix}/robot_hw_sim_plugins.xml"/>
