--- a/gazebo_ros2_control/package.xml
+++ b/gazebo_ros2_control/package.xml
@@ -17,18 +17,17 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>gazebo_dev</build_depend>
-  <exec_depend>gazebo_ros</exec_depend>
+  <depend>angles</depend>
+  <depend>gazebo_dev</depend>
+  <depend>controller_manager</depend>
+  <depend>hardware_interface</depend>
+  <depend>joint_limits_interface</depend>
+  <depend>pluginlib</depend>
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
-  <depend>control_toolbox</depend>
-  <depend>controller_manager</depend>
-  <depend>pluginlib</depend>
-  <depend>hardware_interface</depend>
   <depend>transmission_interface</depend>
-  <depend>joint_limits_interface</depend>
   <depend>urdf</depend>
-  <depend>angles</depend>
+  <depend>yaml_cpp_vendor</depend>
 
   <test_depend>ament_lint_common</test_depend>
   <test_depend>ament_lint_auto</test_depend>
