Used gazebo_ros::Node
Signed-off-by: ahcorde <ahcorde@gmail.com>

--- a/gazebo_ros2_control/CMakeLists.txt
+++ b/gazebo_ros2_control/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(ament_cmake REQUIRED)
 find_package(angles REQUIRED)
 find_package(controller_manager REQUIRED)
 find_package(gazebo_dev REQUIRED)
+find_package(gazebo_ros REQUIRED)
 find_package(hardware_interface REQUIRED)
 find_package(joint_limits_interface REQUIRED)
 find_package(pluginlib REQUIRED)
@@ -25,6 +26,7 @@ add_library(${PROJECT_NAME} SHARED src/gazebo_ros2_control_plugin.cpp)
 ament_target_dependencies(${PROJECT_NAME}
   controller_manager
   gazebo_dev
+  gazebo_ros
   hardware_interface
   pluginlib
   rclcpp
