Added colcon test-result to ci.yml
Signed-off-by: ahcorde <ahcorde@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,3 +54,4 @@ jobs:
       run: |
         cd /home/ros2_ws/
         colcon test --event-handlers console_direct+ --packages-select gazebo_ros2_control
+        colcon test-result
