--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,8 @@ jobs:
           ros-foxy-control-msgs \
           ros-foxy-camera-info-manager \
           ros-foxy-cv-bridge \
-          ros-foxy-image-transport
+          ros-foxy-image-transport \
+          ros-foxy-ament-cmake-test
         apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys D2486D2DD83DB69272AFE98867170598AF249743
         . /etc/os-release \
           && echo "deb http://packages.osrfoundation.org/gazebo/$ID-stable `lsb_release -sc` main" > /etc/apt/sources.list.d/gazebo-latest.list
