--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,5 +54,6 @@ jobs:
       id: test
       run: |
         cd /home/ros2_ws/
+        . /opt/ros/foxy/local_setup.sh
         colcon test --event-handlers console_direct+ --packages-select gazebo_ros2_control
         colcon test-result
