Added gazebo_ros as exec depend
Signed-off-by: ahcorde <ahcorde@gmail.com>

--- a/gazebo_ros2_control_demos/package.xml
+++ b/gazebo_ros2_control_demos/package.xml
@@ -18,6 +18,7 @@
 
   <exec_depend>ament_index_python</exec_depend>
   <exec_depend>gazebo_ros2_control</exec_depend>
+  <exec_depend>gazebo_ros</exec_depend>
   <exec_depend>launch</exec_depend>
   <exec_depend>launch_ros</exec_depend>
 
