--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,7 @@ jobs:
         git clone https://github.com/ros-controls/ros2_control
         git clone https://github.com/ros-controls/ros2_controllers
         git clone https://github.com/ddengster/ros2_control/ -b coffeebot_deps ros2_control_ddengster
+        git clone https://github.com/ros-controls/control_toolbox/
         touch ros2_control_ddengster/COLCON_IGNORE
         cp -r ros2_control_ddengster/joint_limits_interface ros2_control_ddengster/transmission_interface  ros2_control
         git clone https://github.com/ros/xacro -b dashing-devel
