--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,6 +32,7 @@ jobs:
           --skip-keys=joint_state_controller \
           --skip-keys=joint_trajectory_controller \
           --skip-keys=realtime_tools \
+          --skip-keys=transmission_interface \
           --skip-keys=xacro
         apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys D2486D2DD83DB69272AFE98867170598AF249743
         . /etc/os-release \
