--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,7 @@ jobs:
           gnupg2 \
           lsb-release \
           python3-colcon-ros
+        apt-get upgrade
         cd /home/ros2_ws/src/
         git clone https://github.com/ros-controls/realtime_tools -b ros2_devel
         git clone https://github.com/ros-controls/ros2_control
