--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,7 +51,7 @@ jobs:
         cd /home/ros2_ws/
         . /opt/ros/foxy/local_setup.sh
         export CMAKE_PREFIX_PATH=$AMENT_PREFIX_PATH:$CMAKE_PREFIX_PATH
-        colcon build
+        colcon build --packages-up-to gazebo_ros2_control
     - name: Run tests
       id: test
       run: |
