Added initial demos in gazebo_ros2_control_demos (#2)
* Added initial demos in gazebo_ros2_control_demos

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Fixed install in CMakeLists.txt

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Removed commented code

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Added common ros 2 linters

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Added position pid example

Signed-off-by: ahcorde <ahcorde@gmail.com>

* clean config file

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Included test in gazebo_ros2_control_demos

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Added gazebo_ros as exec depend

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Fixed ci.yml

Signed-off-by: ahcorde <ahcorde@gmail.com>

* updated xacro files

Signed-off-by: ahcorde <ahcorde@gmail.com>

* up to demos

Signed-off-by: Louise Poubel <louise@openrobotics.org>

* Included dependencies in the CMakeLists.txt

Signed-off-by: ahcorde <ahcorde@gmail.com>

* avoid tmp files and removed comment

Signed-off-by: ahcorde <ahcorde@gmail.com>

* make linters happy

Signed-off-by: ahcorde <ahcorde@gmail.com>

Co-authored-by: Louise Poubel <louise@openrobotics.org>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,11 +42,11 @@ jobs:
         cd /home/ros2_ws/
         . /opt/ros/foxy/local_setup.sh
         export CMAKE_PREFIX_PATH=$AMENT_PREFIX_PATH:$CMAKE_PREFIX_PATH
-        colcon build --packages-up-to gazebo_ros2_control
+        colcon build --packages-up-to gazebo_ros2_control_demos
     - name: Run tests
       id: test
       run: |
         cd /home/ros2_ws/
         . /opt/ros/foxy/local_setup.sh
-        colcon test --event-handlers console_direct+ --packages-select gazebo_ros2_control
+        colcon test --event-handlers console_direct+ --packages-select gazebo_ros2_control gazebo_ros2_control_demos
         colcon test-result
