--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,10 +29,8 @@ jobs:
         git clone https://github.com/ros-controls/ros2_control
         git clone https://github.com/ros-controls/ros2_controllers
         git clone https://github.com/ddengster/ros2_control/ -b coffeebot_deps ros2_control_ddengster
-        git clone https://github.com/ros-controls/control_toolbox/ -b ros2-master
         touch ros2_control_ddengster/COLCON_IGNORE
-        cp -r ros2_control_ddengster/joint_limits_interface ros2_control_ddengster/transmission_interface  ros2_control
-        sed -i '/rclcpp/d' ros2_control/joint_limits_interface/CMakeLists.txt
+        cp -r ros2_control_ddengster/transmission_interface  ros2_control
         rosdep update
         rosdep install --from-paths ./ -i -y --rosdistro foxy \
           --ignore-src
