--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,8 @@ jobs:
         mkdir -p /home/ros2_ws/src
         cp -r gazebo_ros2_control /home/ros2_ws/src/
         apt-get upgrade -q -y
+        # TODO(ahcorde): Remove this line when a new foxy released is launched (transmission_interface)
+        echo "deb http://packages.ros.org/ros2-testing/ubuntu focal main" > /etc/apt/sources.list.d/ros2-latest.list
         apt-get update && apt-get install -q -y --no-install-recommends \
           dirmngr \
           gnupg2 \
