Updated with ros2-control Foxy API (#44)
* Updated with ros2-control foxy API

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Fixed dependency

Signed-off-by: ahcorde <ahcorde@gmail.com>

* make compile on osx (#46)

Signed-off-by: Karsten Knese <Karsten1987@users.noreply.github.com>

* Fixed velocity example

Signed-off-by: ahcorde <ahcorde@gmail.com>

* make linters happy

Signed-off-by: ahcorde <ahcorde@gmail.com>

* updated Dockerfile

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Added effort example

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Instructions to run with moveit2

Signed-off-by: ahcorde <ahcorde@gmail.com>

* updated readme

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Added PIMPL pattern and other fixes

Signed-off-by: ahcorde <ahcorde@gmail.com>

* updated Dockerfile

Signed-off-by: ahcorde <ahcorde@gmail.com>

* changed log level

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Fixed gazebo_period units

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Updated CI

Signed-off-by: ahcorde <ahcorde@gmail.com>

* updated CI

Signed-off-by: ahcorde <ahcorde@gmail.com>

* updated CI

Signed-off-by: ahcorde <ahcorde@gmail.com>

* update CI

Signed-off-by: ahcorde <ahcorde@gmail.com>

* updated Dockerfile

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Added feedback

Signed-off-by: ahcorde <ahcorde@gmail.com>

* make linters happy

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Removed PID controllers

Signed-off-by: ahcorde <ahcorde@gmail.com>

* make linters happy

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Removed transmission interface

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Removed e-stop

Signed-off-by: ahcorde <ahcorde@gmail.com>

* make linters happy

Signed-off-by: ahcorde <ahcorde@gmail.com>

* clean code

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Fix CI

Signed-off-by: ahcorde <ahcorde@gmail.com>

* Changed log level of a tra

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,16 +18,13 @@ jobs:
         cd ..
         mkdir -p /home/ros2_ws/src
         cp -r gazebo_ros2_control /home/ros2_ws/src/
-        apt-get upgrade -q -y
+        apt-get update && apt-get upgrade -q -y
         apt-get update && apt-get install -q -y --no-install-recommends \
           dirmngr \
           gnupg2 \
           lsb-release \
           python3-colcon-ros
-        apt-get upgrade -y
         cd /home/ros2_ws/src/
-        git clone https://github.com/ros-controls/ros2_control
-        git clone https://github.com/ros-controls/ros2_controllers
         rosdep update
         rosdep install --from-paths ./ -i -y --rosdistro foxy \
           --ignore-src
@@ -36,7 +33,6 @@ jobs:
       run: |
         cd /home/ros2_ws/
         . /opt/ros/foxy/local_setup.sh
-        export CMAKE_PREFIX_PATH=$AMENT_PREFIX_PATH:$CMAKE_PREFIX_PATH
         colcon build --packages-up-to gazebo_ros2_control_demos
     - name: Run tests
       id: test
