--- a/gazebo_ros2_control_demos/config/cartpole_controller_effort.yaml
+++ b/gazebo_ros2_control_demos/config/cartpole_controller_effort.yaml
@@ -2,13 +2,13 @@ controller_manager:
   ros__parameters:
     update_rate: 100  # Hz
 
-    joint_trajectory_controller:
-      type: joint_trajectory_controller/JointTrajectoryController
+    effort_controllers:
+      type: effort_controllers/JointGroupEffortController
 
     joint_state_controller:
       type: joint_state_controller/JointStateController
 
-joint_trajectory_controller:
+effort_controllers:
   ros__parameters:
     joints:
       - slider_to_cart
