--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -15,16 +15,13 @@ RUN apt-get update && apt-get install -q -y --no-install-recommends \
 RUN mkdir -p /home/ros2_ws/src \
     && cd /home/ros2_ws/src/ \
     && git clone https://github.com/ros-simulation/gazebo_ros2_control \
-    && git clone https://github.com/ros-controls/ros2_control \
-    && git clone https://github.com/ros-controls/ros2_controllers \
     && rosdep update \
     && rosdep install --from-paths ./ -i -y --rosdistro foxy \
       --ignore-src
 
 RUN cd /home/ros2_ws/ \
   && . /opt/ros/foxy/setup.sh \
-  && export CMAKE_PREFIX_PATH=$AMENT_PREFIX_PATH:$CMAKE_PREFIX_PATH \
-  && colcon build
+  && colcon build --merge-install
 
 COPY entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
