--- a/gazebo_ros2_control/package.xml
+++ b/gazebo_ros2_control/package.xml
@@ -18,16 +18,13 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>angles</depend>
-  <depend>control_toolbox</depend>
   <depend>gazebo_dev</depend>
   <depend>gazebo_ros</depend>
   <depend>controller_manager</depend>
   <depend>hardware_interface</depend>
-  <depend>joint_limits_interface</depend>
   <depend>pluginlib</depend>
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
-  <depend>transmission_interface</depend>
   <depend>urdf</depend>
   <depend>yaml_cpp_vendor</depend>
 
@@ -37,6 +34,6 @@
 
   <export>
     <build_type>ament_cmake</build_type>
-    <gazebo_ros_control plugin="${prefix}/robot_hw_sim_plugins.xml"/>
+    <gazebo_ros2_control plugin="${prefix}/gazebo_hardware_plugins.xml"/>
   </export>
 </package>
