--- a/gazebo_ros2_control_demos/config/cartpole_controller_velocity.yaml
+++ b/gazebo_ros2_control_demos/config/cartpole_controller_velocity.yaml
@@ -1,17 +1,15 @@
-cart_pole_controller:
+controller_manager:
   ros__parameters:
-    type: velocity_controllers/JointGroupVelocityController
-    joints:
-       - slider_to_cart
-    write_op_modes:
-       - slider_to_cart
-    state_publish_rate: 25
-    action_monitor_rate: 20
-    constraints:
-      stopped_velocity_tolerance: 0.05
-      goal_time: 5
+    update_rate: 100  # Hz
 
-joint_state_controller:
+    velocity_controller:
+      type: velocity_controllers/JointGroupVelocityController
+
+    joint_state_controller:
+      type: joint_state_controller/JointStateController
+
+velocity_controller:
   ros__parameters:
-    type: joint_state_controller/JointStateController
-    publish_rate: 50
+    joints:
+      - slider_to_cart
+    interface_name: position
