--- a/gazebo_ros2_control_demos/config/cartpole_controller_effort.yaml
+++ b/gazebo_ros2_control_demos/config/cartpole_controller_effort.yaml
@@ -12,4 +12,4 @@ effort_controllers:
   ros__parameters:
     joints:
       - slider_to_cart
-    interface_name: position
+    interface_name: effort
