--- a/gazebo_ros2_control_demos/config/cartpole_controller_velocity.yaml
+++ b/gazebo_ros2_control_demos/config/cartpole_controller_velocity.yaml
@@ -12,4 +12,4 @@ velocity_controller:
   ros__parameters:
     joints:
       - slider_to_cart
-    interface_name: position
+    interface_name: velocity
