--- a/gazebo_ros2_control/package.xml
+++ b/gazebo_ros2_control/package.xml
@@ -7,6 +7,7 @@
   <maintainer email="ahcorde@osrfoundation.org">Alejandro Hernandez</maintainer>
 
   <license>BSD</license>
+  <license>Apache License 2.0</license>
 
   <url type="website">http://ros.org/wiki/gazebo_ros_control</url>
   <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros2_control/issues</url>
