use upstream yaml parser
Signed-off-by: Karsten Knese <Karsten1987@users.noreply.github.com>

--- a/gazebo_ros2_control/CMakeLists.txt
+++ b/gazebo_ros2_control/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(gazebo_ros REQUIRED)
 find_package(hardware_interface REQUIRED)
 find_package(pluginlib REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(rcl_yaml_param_parser REQUIRED)
 find_package(urdf REQUIRED)
 find_package(yaml_cpp_vendor REQUIRED)
 
@@ -37,6 +38,7 @@ ament_target_dependencies(${PROJECT_NAME}
   hardware_interface
   pluginlib
   rclcpp
+  rcl_yaml_param_parser
   urdf
   yaml_cpp_vendor
 )
@@ -49,6 +51,7 @@ ament_target_dependencies(gazebo_hardware_plugins
   gazebo_dev
   hardware_interface
   rclcpp
+  rcl_yaml_param_parser
 )
 
 ## Install
