Added tests to CI
Signed-off-by: ahcorde <ahcorde@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,11 +33,11 @@ jobs:
       run: |
         cd /home/ros2_ws/
         . /opt/ros/foxy/local_setup.sh
-        colcon build --packages-up-to gazebo_ros2_control_demos
+        colcon build --packages-up-to gazebo_ros2_control_demos gazebo_ros2_control_tests
     - name: Run tests
       id: test
       run: |
         cd /home/ros2_ws/
         . /opt/ros/foxy/local_setup.sh
-        colcon test --event-handlers console_direct+ --packages-select gazebo_ros2_control gazebo_ros2_control_demos
+        colcon test --event-handlers console_direct+ --packages-select gazebo_ros2_control gazebo_ros2_control_demos gazebo_ros2_control_tests
         colcon test-result
