--- a/gazebo_ros2_control_tests/package.xml
+++ b/gazebo_ros2_control_tests/package.xml
@@ -11,6 +11,7 @@
   <exec_depend>control_msgs</exec_depend>
   <exec_depend>controller_manager_msgs</exec_depend>
   <exec_depend>gazebo_ros2_control</exec_depend>
+  <exec_depend>gazebo_ros2_control_demos</exec_depend>
   <exec_depend>launch</exec_depend>
   <exec_depend>launch_ros</exec_depend>
   <exec_depend>launch_testing</exec_depend>
