--- a/gazebo_ros2_control_demos/CMakeLists.txt
+++ b/gazebo_ros2_control_demos/CMakeLists.txt
@@ -47,6 +47,12 @@ ament_target_dependencies(example_effort
   std_msgs
 )
 
+add_executable(example_gripper examples/example_gripper)
+ament_target_dependencies(example_gripper
+  rclcpp
+  std_msgs
+)
+
 add_executable(example_diff_drive examples/example_diff_drive.cpp)
 ament_target_dependencies(example_diff_drive
   rclcpp
@@ -66,6 +72,7 @@ install(
     example_position
     example_velocity
     example_effort
+    example_gripper
     example_diff_drive
   DESTINATION
     lib/${PROJECT_NAME}
