--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,11 +40,14 @@ repos:
     -   id: pyupgrade
         args: [--py36-plus]
 
-  # PEP 257
-  - repo: https://github.com/FalconSocial/pre-commit-mirrors-pep257
-    rev: v0.3.3
+  # # PEP 257
+  - repo: local
     hooks:
-    - id: pep257
+    - id: ament_pep257
+      name: ament_pep257
+      description: Format files with pep257.
+      entry: ament_pep257
+      language: system
       args: ["--ignore=D100,D101,D102,D103,D104,D105,D106,D107,D203,D212,D404"]
 
   - repo: https://github.com/pycqa/flake8
@@ -56,13 +59,13 @@ repos:
   # CPP hooks
   - repo: local
     hooks:
-      - id: clang-format
-        name: clang-format
-        description: Format files with ClangFormat.
-        entry: clang-format-12
+      - id: ament_uncrustify
+        name: ament_uncrustify
+        description: Format files with uncrustify.
+        entry: ament_uncrustify
         language: system
         files: \.(c|cc|cxx|cpp|frag|glsl|h|hpp|hxx|ih|ispc|ipp|java|js|m|proto|vert)$
-        args: ['-fallback-style=none', '-i']
+        args: ["--reformat"]
 
   - repo: local
     hooks:
