--- a/.github/workflows/ci-format.yaml
+++ b/.github/workflows/ci-format.yaml
@@ -1,4 +1,3 @@
-
 # This is a format job. Pre-commit has a first-party GitHub action, so we use
 # that: https://github.com/pre-commit/action
 
@@ -11,14 +10,14 @@ on:
 jobs:
   pre-commit:
     name: Format
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v2
       with:
-        python-version: 3.9.7
+        python-version: 3.10.6
     - name: Install system hooks
-      run: sudo apt install -qq clang-format-12 cppcheck
+      run: sudo apt install -qq cppcheck ament-cmake-uncrustify ament-cmake-pep257
     - uses: pre-commit/action@v2.0.3
       with:
         extra_args: --all-files --hook-stage manual
