--- a/gazebo_ros2_control/package.xml
+++ b/gazebo_ros2_control/package.xml
@@ -19,6 +19,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>angles</depend>
+  <depend>service_msgs</depend>
   <depend>gazebo_dev</depend>
   <depend>gazebo_ros</depend>
   <depend>controller_manager</depend>
