--- a/.github/workflows/ci-iron.yaml
+++ b/.github/workflows/ci-iron.yaml
@@ -1,17 +1,18 @@
-name: Gazebo ros2 control CI
+name: gazebo_ros2_control CI - iron
 
 on:
   pull_request:
+    branches:
+      - iron
   push:
     branches:
-      - master
-      - humble
+      - iron
 
 jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: osrf/ros:rolling-desktop
+      image: osrf/ros:iron-desktop
     steps:
     - uses: actions/checkout@v4
     - name: Setup colcon workspace
@@ -28,25 +29,25 @@ jobs:
           python3-colcon-ros
         cd /home/ros2_ws/src/
         rosdep update
-        rosdep install --from-paths ./ -i -y --rosdistro rolling \
+        rosdep install --from-paths ./ -i -y --rosdistro iron \
           --ignore-src
     - name: Build project
       id: build
       run: |
         cd /home/ros2_ws/
-        . /opt/ros/rolling/local_setup.sh
+        . /opt/ros/iron/local_setup.sh
         colcon build --packages-up-to gazebo_ros2_control_demos
     - name: Run tests
       id: test
       run: |
         cd /home/ros2_ws/
-        . /opt/ros/rolling/local_setup.sh
+        . /opt/ros/iron/local_setup.sh
         colcon test --event-handlers console_direct+ --packages-select gazebo_ros2_control gazebo_ros2_control_demos
         colcon test-result
   build_testing:
     runs-on: ubuntu-latest
     container:
-      image: osrf/ros:rolling-desktop
+      image: osrf/ros:iron-desktop
     steps:
     - uses: actions/checkout@v4
     - name: Setup colcon workspace
@@ -64,18 +65,18 @@ jobs:
           python3-colcon-ros
         cd /home/ros2_ws/src/
         rosdep update
-        rosdep install --from-paths ./ -i -y --rosdistro rolling \
+        rosdep install --from-paths ./ -i -y --rosdistro iron \
           --ignore-src
     - name: Build project
       id: build
       run: |
         cd /home/ros2_ws/
-        . /opt/ros/rolling/local_setup.sh
+        . /opt/ros/iron/local_setup.sh
         colcon build --packages-up-to gazebo_ros2_control_demos
     - name: Run tests
       id: test
       run: |
         cd /home/ros2_ws/
-        . /opt/ros/rolling/local_setup.sh
+        . /opt/ros/iron/local_setup.sh
         colcon test --event-handlers console_direct+ --packages-select gazebo_ros2_control gazebo_ros2_control_demos
         colcon test-result
