Update readme and CI jobs for iron (#248)
Co-authored-by: Alejandro Hernández Cordero <ahcorde@gmail.com>
(cherry picked from commit 074617a61db57e06c33cb4a3a92a75864bb67a39)

# Conflicts:
#	.github/dependabot.yml

--- a/.github/workflows/ci-iron.yaml
+++ b/.github/workflows/ci-iron.yaml
@@ -1,19 +1,20 @@
-name: Gazebo ros2 control CI
+name: gazebo_ros2_control CI - iron
 
 on:
   pull_request:
+    branches:
+      - iron
   push:
     branches:
-      - master
-      - humble
+      - iron
 
 jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: osrf/ros:humble-desktop
+      image: osrf/ros:iron-desktop
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Setup colcon workspace
       id: configure
       run: |
@@ -28,27 +29,27 @@ jobs:
           python3-colcon-ros
         cd /home/ros2_ws/src/
         rosdep update
-        rosdep install --from-paths ./ -i -y --rosdistro humble \
+        rosdep install --from-paths ./ -i -y --rosdistro iron \
           --ignore-src
     - name: Build project
       id: build
       run: |
         cd /home/ros2_ws/
-        . /opt/ros/humble/local_setup.sh
+        . /opt/ros/iron/local_setup.sh
         colcon build --packages-up-to gazebo_ros2_control_demos
     - name: Run tests
       id: test
       run: |
         cd /home/ros2_ws/
-        . /opt/ros/humble/local_setup.sh
+        . /opt/ros/iron/local_setup.sh
         colcon test --event-handlers console_direct+ --packages-select gazebo_ros2_control gazebo_ros2_control_demos
         colcon test-result
   build_testing:
     runs-on: ubuntu-latest
     container:
-      image: osrf/ros:humble-desktop
+      image: osrf/ros:iron-desktop
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Setup colcon workspace
       id: configure
       run: |
@@ -64,18 +65,18 @@ jobs:
           python3-colcon-ros
         cd /home/ros2_ws/src/
         rosdep update
-        rosdep install --from-paths ./ -i -y --rosdistro humble \
+        rosdep install --from-paths ./ -i -y --rosdistro iron \
           --ignore-src
     - name: Build project
       id: build
       run: |
         cd /home/ros2_ws/
-        . /opt/ros/humble/local_setup.sh
+        . /opt/ros/iron/local_setup.sh
         colcon build --packages-up-to gazebo_ros2_control_demos
     - name: Run tests
       id: test
       run: |
         cd /home/ros2_ws/
-        . /opt/ros/humble/local_setup.sh
+        . /opt/ros/iron/local_setup.sh
         colcon test --event-handlers console_direct+ --packages-select gazebo_ros2_control gazebo_ros2_control_demos
         colcon test-result
