--- a/gazebo_ros2_control/CMakeLists.txt
+++ b/gazebo_ros2_control/CMakeLists.txt
@@ -7,6 +7,7 @@ find_package(controller_manager REQUIRED)
 find_package(gazebo_dev REQUIRED)
 find_package(gazebo_ros REQUIRED)
 find_package(hardware_interface REQUIRED)
+find_package(control_toolbox REQUIRED)
 find_package(pluginlib REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(yaml_cpp_vendor REQUIRED)
@@ -38,6 +39,7 @@ ament_target_dependencies(${PROJECT_NAME}
   hardware_interface
   pluginlib
   rclcpp
+  control_toolbox
   yaml_cpp_vendor
 )
 
@@ -48,6 +50,7 @@ ament_target_dependencies(gazebo_hardware_plugins
   angles
   gazebo_dev
   hardware_interface
+  control_toolbox
   rclcpp
 )
 
