--- a/gazebo_ros2_control/package.xml
+++ b/gazebo_ros2_control/package.xml
@@ -27,6 +27,7 @@
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>yaml_cpp_vendor</depend>
+  <depend>control_toolbox</depend>
 
   <test_depend>ament_lint_common</test_depend>
   <test_depend>ament_lint_auto</test_depend>
