--- a/gazebo_ros2_control_demos/config/holonomic_drive_controller.yaml
+++ b/gazebo_ros2_control_demos/config/holonomic_drive_controller.yaml
@@ -3,29 +3,29 @@ controller_manager:
     update_rate: 30
     use_sim_time: true
 
-    mec_cont:
+    mecanum_drive_controller:
       type: mecanum_drive_controller/MecanumDriveController
-    
-    joint_broad:
-      type: joint_state_broadcaster/JointStateBroadcaster
-         
 
-mec_cont:
+    joint_state_broadcaster:
+      type: joint_state_broadcaster/JointStateBroadcaster
+
+
+mecanum_drive_controller:
   ros__parameters:
 
-    publish_rate: 30.0 
-                     
-    command_joint_names: ["front_left_joint", "rear_left_joint", "rear_right_joint", "front_right_joint"]                
-            
-    interface_name: velocity    
-    
+    publish_rate: 30.0
+
+    command_joint_names: ["front_left_joint", "rear_left_joint", "rear_right_joint", "front_right_joint"]
+
+    interface_name: velocity
+
     kinematics:
-        wheels_radius: 0.4 
-        sum_of_robot_center_projection_on_X_Y_axis: 1.0       
-    
+        wheels_radius: 0.4
+        sum_of_robot_center_projection_on_X_Y_axis: 1.0
+
     base_frame_id: "base_link"
-    odom_frame_id: "odom" 
-        
-    enable_odom_tf: true 
-         
-    use_stamped_vel: true              
+    odom_frame_id: "odom"
+
+    enable_odom_tf: true
+
+    use_stamped_vel: true
