--- a/gazebo_ros2_control_demos/config/holonomic_drive_controller.yaml
+++ b/gazebo_ros2_control_demos/config/holonomic_drive_controller.yaml
@@ -13,15 +13,17 @@ controller_manager:
 mecanum_drive_controller:
   ros__parameters:
 
-    publish_rate: 30.0
-
-    command_joint_names: ["front_left_joint", "rear_left_joint", "rear_right_joint", "front_right_joint"]
-
-    interface_name: velocity
+    reference_timeout: 0.0
+    
+    front_left_wheel_command_joint_name: "front_left_joint"
+    front_right_wheel_command_joint_name: "front_right_joint"
+    rear_right_wheel_command_joint_name: "rear_right_joint"
+    rear_left_wheel_command_joint_name: "rear_left_joint"
 
     kinematics:
-        wheels_radius: 0.4
-        sum_of_robot_center_projection_on_X_Y_axis: 1.0
+        base_frame_offset: { x: 0.0, y: 0.0, theta: 0.0 }
+        wheels_radius: 0.056
+        sum_of_robot_center_projection_on_X_Y_axis: 0.6
 
     base_frame_id: "base_link"
     odom_frame_id: "odom"
