Add a launch file which spawns two robots

--- a/gazebo_ros2_control_demos/config/diff_drive_controller_namespaced.yaml
+++ b/gazebo_ros2_control_demos/config/diff_drive_controller_namespaced.yaml
@@ -1,4 +1,4 @@
-/r1/controller_manager:
+/**/controller_manager:
   ros__parameters:
     update_rate: 100  # Hz
     use_sim_time: true
@@ -9,7 +9,7 @@
     diff_drive_base_controller:
       type: diff_drive_controller/DiffDriveController
 
-/r1/diff_drive_base_controller:
+/**/diff_drive_base_controller:
   ros__parameters:
     left_wheel_names: ["left_wheel_joint"]
     right_wheel_names: ["right_wheel_joint"]
