--- a/.github/workflows/update-pre-commit.yml
+++ b/.github/workflows/update-pre-commit.yml
@@ -4,8 +4,8 @@ name: Auto Update pre-commit
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 0 1 * *'  # Runs at 00:00, on day 1 of the month
+  # schedule:
+  #   - cron: '0 0 1 * *'  # Runs at 00:00, on day 1 of the month
 
 jobs:
   auto_update_and_create_pr:
